# pfsense-mcp

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  endpoint-inventory.json  flake.nix  pyproject.toml  server.json  test_list_tools.py  test_modules.py  test_naming.py
bank-tester/: TESTER-CLAUDE.md  analyze-results.py  generate-tasks.py  mcp-config.json  run-bank-test.sh  task-config.yaml
bank-tester/tasks/: 01-system-status.md  02-firewall-alias-crud.md  03-firewall-rule.md  04-port-forward-workflow.md  05-dns-settings.md  06-wireguard-tunnel.md  07-certificate-management.md  08-diagnostics.md  09-full-network-setup.md  10-firewall-core---alias-rule-apply-advanced-settings.md  11-firewall-nat---port-forward-outbound-one-to-one.md  12-firewall-schedule-and-time-range.md  13-firewall-traffic-shaper-limiter-queues.md  14-firewall-virtual-ip-and-apply.md  15-firewall-states-and-virtual-ips.md  15-firewall-states.md  16-interface---interface-vlan-bridge-gre-group-lagg-apply.md  (+49 more)
examples/: nixosconfig-integration.md
generator/: __init__.py  __main__.py  codegen.py  context_builder.py  loader.py  naming.py  schema_parser.py  test_generator.py
pfsense_mcp/: __init__.py  __main__.py  server.py
research/: .gitignore  error-table-opus.md  first-attempt-failures.md  mcp-server-best-practices.md  opus-diagnosis-run.md  service-status-bug.md  skipped-endpoints-analysis.md  sprint-1-failures.md  sprint-2-failures.md  sprint-3-failures.md  sprint-4-failures.md
scripts/: build-inventory.py  fetch-samples.sh
templates/: server.py.j2
tests/: conftest.py  expected_tool_names.json  test_smoke.py
vm/: RESEARCH.md  UPGRADE-LEARNINGS.md  extract-config.exp  firstboot.exp  install.exp  pfSense-CE-2.7.2-RELEASE-amd64.iso.gz.sha256  reference-config.xml  run-tests.sh  setup.sh  upgrade-2.8.exp
